--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,8 +28,11 @@ option(BUILD_TESTS "Build the tests" ON)
 
 add_executable(cpptalksindex
   src/main.cpp
+  src/TalksLoader.cpp
 )
 target_compile_options(cpptalksindex PRIVATE ${WARNING_FLAGS})
+target_link_libraries(cpptalksindex json expected)
+target_include_directories(cpptalksindex PUBLIC include)
 set_property(TARGET cpptalksindex PROPERTY CXX_STANDARD 17)
 set_property(TARGET cpptalksindex PROPERTY CXX_STANDARD_REQUIRED ON)
 
