Add slightly altered cpp-httplib.
The code has been modified so that the header files are considered
system includes. This prevents warnings from being emitted from the
library.

--- a/deps/CMakeLists.txt
+++ b/deps/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_subdirectory(expected)
 add_subdirectory(GSL)
 add_subdirectory(json)
+add_subdirectory(cpp-httplib)
 
 add_library(range-v3 INTERFACE)
 target_include_directories(range-v3 SYSTEM INTERFACE range-v3/include)
