Add "GET /api/talks".

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,13 +27,14 @@ set(WARNING_FLAGS
 option(BUILD_TESTS "Build the tests" ON)
 
 add_executable(cpptalksindex
+  src/HTTPController.cpp
   src/main.cpp
   src/TalksDB.cpp
   src/TalksLoader.cpp
   src/Utils.cpp
 )
 target_compile_options(cpptalksindex PRIVATE ${WARNING_FLAGS})
-target_link_libraries(cpptalksindex json expected range-v3 GSL)
+target_link_libraries(cpptalksindex json expected range-v3 GSL httplib pthread)
 target_include_directories(cpptalksindex PUBLIC include)
 set_property(TARGET cpptalksindex PROPERTY CXX_STANDARD 17)
 set_property(TARGET cpptalksindex PROPERTY CXX_STANDARD_REQUIRED ON)
